force-app/main/default/objects/CampaignMember/fields/TR1__Campaign_Template_Mapping__c.field-meta.xml
<CustomField>
    <fullName>TR1__Campaign_Template_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Campaign Template Mapping</description>
    <inlineHelpText>Link to the related Campaign Template Mapping</inlineHelpText>
    <label>Campaign Template Mapping</label>
    <referenceTo>TR1__Campaign_Template_Mapping__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>