force-app/main/default/objects/CampaignMember/fields/TR1__Email__c.field-meta.xml
<CustomField>
    <fullName>TR1__Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if a message has to be sent via Email</description>
    <inlineHelpText>Determines if a message has to be sent via Email</inlineHelpText>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>