force-app/main/default/objects/CampaignMember/fields/TR1__External_Template_for_WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>TR1__External_Template_for_WhatsApp__c</fullName>
    <description>Stores the External Key Value for WhatsApp if &apos;Use External Source for Templates&apos; is active.</description>
    <inlineHelpText>Stores the External Key Value for WhatsApp if &apos;Use External Source for Templates&apos; is active.</inlineHelpText>
    <label>External Template for WhatsApp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>