force-app/main/default/objects/CampaignMember/fields/TR1__Job__c.field-meta.xml
<CustomField>
    <fullName>TR1__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Job object used for the SFMC/Digital Engagement integration.</description>
    <inlineHelpText>Lookup to the Job object used for the SFMC/Digital Engagement integration.</inlineHelpText>
    <label>Job</label>
    <referenceTo>TR1__Job__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>