force-app/main/default/objects/CampaignMember/fields/TR1__Job_Account__c.field-meta.xml
<CustomField>
    <fullName>TR1__Job_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account object related to a job used for the SFMC/Digital Engagement integration.</description>
    <inlineHelpText>Lookup to the Account object related to a job used for the SFMC/Digital Engagement integration.</inlineHelpText>
    <label>Job Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>