force-app/main/default/objects/CampaignMember/fields/TR1__Language__c.field-meta.xml
<CustomField>
    <fullName>TR1__Language__c</fullName>
    <description>Stores the language which the user selected from the language dropdown on the BH4SF Email Editor.</description>
    <inlineHelpText>Stores the language which the user selected from the language dropdown on the BH4SF Email Editor.</inlineHelpText>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>