force-app/main/default/objects/CampaignMember/fields/TR1__Message_Detail__c.field-meta.xml
<CustomField>
    <fullName>TR1__Message_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Message Detail object used for the SFMC/Digital Engagement integration.</description>
    <inlineHelpText>Lookup to the Message Detail object used for the SFMC/Digital Engagement integration.</inlineHelpText>
    <label>Message Detail</label>
    <referenceTo>TR1__Message_Detail__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>