force-app/main/default/objects/CampaignMember/fields/TR1__Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>TR1__Recipient_Email__c</fullName>
    <description>Stores the email address to which the message will be sent.</description>
    <inlineHelpText>Stores the email address to which the message will be sent.</inlineHelpText>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>