force-app/main/default/objects/CampaignMember/fields/TR1__Send_Out_Schedule_V2__c.field-meta.xml
<CustomField>
    <fullName>TR1__Send_Out_Schedule_V2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Send Out Schedule V2 object used for the SFMC/Digital Engagement integration.</description>
    <inlineHelpText>Lookup to the Send Out Schedule V2 object used for the SFMC/Digital Engagement integration.</inlineHelpText>
    <label>Send Out Schedule V2</label>
    <referenceTo>TR1__Send_Out_Schedule_V2__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>