force-app/main/default/objects/CampaignMember/fields/TR1__Sender__c.field-meta.xml
<CustomField>
    <fullName>TR1__Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User record used for the SFMC/Digital Engagement integration to provide information about the message sender(eg Name, Email)</description>
    <inlineHelpText>Lookup to the User record used for the SFMC/Digital Engagement integration to provide information about the message sender(eg Name, Email)</inlineHelpText>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>