force-app/main/default/objects/CampaignMember/fields/TR1__Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>TR1__Sender_Email__c</fullName>
    <description>Stores the email which should be displayed in the &quot;From&quot; section of email message.</description>
    <inlineHelpText>Stores the email which should be displayed in the &quot;From&quot; section of email message.</inlineHelpText>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>