force-app/main/default/objects/CampaignMember/fields/TR1__Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>TR1__Sender_Name__c</fullName>
    <description>Stores the Name of the person who send an email.</description>
    <inlineHelpText>Stores the Name of the person who send an email.</inlineHelpText>
    <label>Sender Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>