force-app/main/default/objects/CampaignMember/fields/TR1__SMS__c.field-meta.xml
<CustomField>
    <fullName>TR1__SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if a message additionally has to be sent via SMS</description>
    <inlineHelpText>Determines if a message additionally has to be sent via SMS</inlineHelpText>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>