force-app/main/default/objects/CampaignMember/fields/TR1__WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>TR1__WhatsApp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if a message additionally has to be sent via WhatsApp</description>
    <inlineHelpText>Determines if a message additionally has to be sent via WhatsApp</inlineHelpText>
    <label>WhatsApp</label>
    <type>Checkbox</type>
</CustomField>